--- a/style.css
+++ b/style.css
@@ -784,7 +784,7 @@ right: 0;
 }
 
 .factsContainer h3 {
-    color: #094548;
+    color: #011112;
     opacity: 0.6;
 }
 
@@ -849,10 +849,11 @@ figure.snip1208 {
     position: relative;
     overflow: hidden;
 
-    background-color: #ffffff;
+    background-color: #d69533;
     color: #000000;
     text-align: left;
     font-size: 16px;
+    border-radius: 10px;
 }
 
 
@@ -882,7 +883,7 @@ figure.snip1208 h3 {
     margin-bottom: 10px;
     display: inline-block;
     font-weight: 400;
-    color: #333333;
+    color: #ffff;
     font-size: 18px;
     text-transform: uppercase;
 }
@@ -891,17 +892,19 @@ figure.snip1208 p {
     font-size: 0.8em;
     margin-bottom: 20px;
     line-height: 1.6em;
+    color: #e7e7e7;
+
 }
 
 figure.snip1208 button {
     border: medium none;
     padding: 10px 20px;
-    background-color: #1abc9c;
-    font-weight: 800;
+    background-color: #b87c21;
+    font-weight: 200;
     color: #ffffff;
     letter-spacing: 2px;
     text-transform: uppercase;
-    font-size: 0.8em;
+    font-size: 0.6em;
 }
 
 figure.snip1208 a {
@@ -917,13 +920,14 @@ figure.snip1208:hover img,
 figure.snip1208.hover img {
     -webkit-transform: scale(1.1);
     transform: scale(1.1);
+    filter: grayscale(110%);
 }
 
 
 
 figure.snip1208:hover button,
 figure.snip1208.hover button {
-    background-color: #117964;
+    background-color: #9c640e;
 }
 
 /*footer*/
@@ -939,7 +943,7 @@ footer a,
 footer p {
 
     text-decoration: none;
-    color: #ababab;
+    color: #d2d2d2;
     transition: color 300ms ease;
 }
 
@@ -948,6 +952,45 @@ footer a:hover {
     color: #fff;
 
 }
+
+.newsblock a {
+
+    text-decoration: none;
+}
+
+.newsroom i {
+
+    color: #fff;
+    font-size: 20px;
+    position: relative;
+    transition: left ease 500ms;
+}
+
+.newsblock:hover i {
+
+    left: 15px;
+    color: #f9c77c;
+
+
+}
+
+.newsblock p {
+
+    color: #fff;
+    font-size: 14px;
+    transition: color ease 300ms;
+
+
+}
+
+.newsblock:hover p {
+
+    color: #ffebce;
+
+
+}
+
+/*news room end*/
 
 /*verticals cards*/
 
@@ -959,6 +1002,7 @@ footer a:hover {
     justify-content: space-between;
     height: 100%;
     width: auto;
+    position: relative;
 }
 
 .card {
