--- a/style.css
+++ b/style.css
@@ -803,18 +803,15 @@ right: 0;
     align-items: center;
 }
 
-.fact img {
-    width: 24vw;
-    height: auto;
-    margin: 1em;
-}
+
 
 .case_study_card {
 
     background-color: #fff;
-    padding: 70px 50px;
+    padding: 40px 30px;
     border-radius: 10px;
     transition: all 0.4s;
+    width: 100%;
 
 }
 
@@ -985,7 +982,7 @@ footer a:hover {
 
 .newsblock:hover p {
 
-    color: #ffebce;
+    color: #dfdfdf;
 
 
 }
