--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ p {
 .navbar-light .navbar-nav .show>.nav-link,
 .navbar-light .navbar-nav .nav-link {
     color: rgba(0, 0, 0, 1);
-    margin: 0 5px;
+    margin: 0 10px;
     transition: transform 300ms ease-out;
     font-size: 14px;
     font-weight: 200;
@@ -325,39 +325,68 @@ color: #c52518;
 /*side navigation end*/
 /*buttons*/
 
+.snip1417 {
+    border: none;
+    background-color: #ad482d;
+    border-radius: 5px;
+    color: #ffffff;
+    cursor: pointer;
+    padding: 0px 25px;
 
-text {
-    font-weight: 500;
-    letter-spacing: 1.2px;
+    line-height: 46px;
+    font-weight: 300;
+    font-size: 1em;
+    outline: none;
+    position: relative;
+    overflow: hidden;
+    font-size: 16px;
+    border-radius: 23px;
+    letter-spacing: 2px;
+    -webkit-transition: all 0.35s ease;
+    transition: all 0.35s ease;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-transform: translateZ(0);
 }
 
-.btn:hover {
-    color: #fff;
+.snip1417:before {
+    opacity: 0;
+    content: "";
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    border-radius: inherit;
+    background-color: #ffffff;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+    -webkit-transform: translateX(-100%);
+    transform: translateX(-100%);
 }
 
-.btn-check:focus+.btn,
-.btn:focus {
-    box-shadow: none;
+.snip1417:after {
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    border: 2px solid #ad482d;
+    content: '';
+    border-radius: inherit;
 }
 
-/*ripple button*/
-
-.my-btn {
-    background-color: #F24738;
-    border-radius: 100px;
-    color: #fff;
-    font-weight: 200;
-    font-size: 14px;
-    transition: background-color ease 500ms;
-    padding: 11px 18px;
+.snip1417:hover,
+.snip1417.hover {
+    background-color: #ad482d;
+    color: #ffffff;
 }
 
-.my-btn:hover {
-    background-color: #ed8989;
-    border-radius: 100px;
-    color: #fff;
-    font-weight: 200;
-    font-size: 14px;
+.snip1417:hover:before,
+.snip1417.hover:before {
+    -webkit-transform: translateX(0%);
+    transform: translateX(0%);
+    opacity: 0.20;
 }
 
 
@@ -482,7 +511,7 @@ figure {
     -webkit-transition: all 0.25s ease;
     transition: all 0.25s ease;
     z-index: 1;
-    border: 2px rgba(255, 255, 255, 0.3) solid;
+    border: 2px #f7e5ca solid;
     border-radius: 5px;
 }
 
@@ -507,12 +536,14 @@ figure {
 .snip1584 i.iservice {
     margin-bottom: 8px;
     font-size: 22px;
+    color: #eba63f;
 
 
 }
 
 .snip1584:hover i.iservice {
     color: #1d1d2c;
+    color: #465ba4;
 
 
 }
@@ -549,6 +580,7 @@ figure {
     font-size: 13px;
     line-height: 1.6;
     font-weight: 400;
+    color: #eba63f;
 
 }
 
@@ -579,7 +611,7 @@ a.tileClick {
 .snip1584:hover h5,
 .snip1584.hover h5 {
 
-    color: #1d1d2c;
+    color: #465ba4;
 }
 
 
@@ -763,6 +795,7 @@ right: 0;
 .factsContainer {
     padding: 6em 2em;
     line-height: 10vh;
+
 }
 
 /*.factsContainer h2 {
@@ -786,16 +819,16 @@ right: 0;
 .factsContainer_sm {
     display: flex;
     width: 300vw;
+    justify-content: center;
 
 }
 
 .fact {
     display: flex;
-    flex-direction: column;
-    height: 40vh;
-    flex: 1;
     justify-content: center;
     align-items: center;
+    padding: 40px;
+
 }
 
 
