--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ p {
 .navbar-light .navbar-nav .nav-link.active,
 .navbar-light .navbar-nav .show>.nav-link,
 .navbar-light .navbar-nav .nav-link {
-    color: rgba(0, 0, 0, 1);
+    color: #949494;
     margin: 0 10px;
     transition: transform 300ms ease-out;
     font-size: 14px;
