--- a/style.css
+++ b/style.css
@@ -826,7 +826,6 @@ right: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 40px;
 
 }
 
@@ -835,7 +834,7 @@ right: 0;
 .case_study_card {
 
     background-color: #fff;
-    padding: 40px 30px;
+    padding: 30px 12px;
     border-radius: 10px;
     transition: all 0.4s;
     width: 100%;
@@ -853,6 +852,14 @@ right: 0;
 .case_study_card h3 {
 
     color: #545454;
+    font-size: 20px;
+
+}
+
+.case_study_card p {
+
+    color: grey;
+    font-size: 13px;
 
 }
 
