--- a/style.css
+++ b/style.css
@@ -826,7 +826,7 @@ right: 0;
 .case_study_card:hover {
     box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.4);
     transform: scale(1.04);
-    background-color: #ddf2fb;
+    background-color: #ebebeb;
 
 
 }
