--- a/style.css
+++ b/style.css
@@ -75,10 +75,10 @@ p {
 .navbar-dark .navbar-nav .nav-link:focus,
 .navbar-dark .navbar-nav .nav-link:hover {
     /*color: rgba(255, 255, 255, 0.75);*/
-    color: #dcdcdc;
+    color: #e7e7e7;
 }
 
-.nav-item {
+.navbar-dark .navbar-nav .nav-item {
     margin-top: 39px;
 }
 
@@ -86,7 +86,7 @@ p {
 .navbar-light .navbar-nav .nav-link.active,
 .navbar-light .navbar-nav .show>.nav-link,
 .navbar-light .navbar-nav .nav-link {
-    color: #949494;
+    color: #2e2e2e;
     margin: 0 10px;
     transition: transform 300ms ease-out;
     font-size: 14px;
@@ -96,7 +96,7 @@ p {
 .navbar-light .navbar-nav .nav-link:focus,
 .navbar-light .navbar-nav .nav-link:hover {
     /*color: rgba(0, 0, 0, 0.6);*/
-    color: #ad482d;
+    color: #e40c2b;
 }
 
 /*intro div about us*/
@@ -284,7 +284,7 @@ nav a:hover {
     color: #f5c36f;
 }
 
-.fa {
+/*.fa {
     color: #b3b3b3;
     padding-right: 0px;
     font-size: 1.8em !important;
@@ -293,8 +293,7 @@ nav a:hover {
     -moz-transition: .3s;
     -webkit-transition: .3s;
     transition: .3s;
-}
-
+}*/
 /*.fa:hover {
 color: #c52518;
 }*/
@@ -317,7 +316,7 @@ color: #c52518;
 /*buttons*/
 .snip1417 {
     border: none;
-    background-color: #ad482d;
+    background-color: #e40c2b;
     border-radius: 5px;
     color: #ffffff;
     cursor: pointer;
@@ -347,27 +346,17 @@ color: #c52518;
     left: 0px;
     right: 0px;
     border-radius: inherit;
-    background-color: #ffffff;
+    background-color: #000;
     -webkit-transition: all 0.3s;
     transition: all 0.3s;
     -webkit-transform: translateX(-100%);
     transform: translateX(-100%);
 }
 
-.snip1417:after {
-    position: absolute;
-    top: 0px;
-    bottom: 0px;
-    left: 0px;
-    right: 0px;
-    border: 2px solid #ad482d;
-    content: '';
-    border-radius: inherit;
-}
 
 .snip1417:hover,
 .snip1417.hover {
-    background-color: #ad482d;
+    background-color: #e40c2b;
     color: #ffffff;
 }
 
@@ -375,7 +364,7 @@ color: #c52518;
 .snip1417.hover:before {
     -webkit-transform: translateX(0%);
     transform: translateX(0%);
-    opacity: 0.20;
+    opacity: 0.15;
 }
 
 /*scroll-down-icon animation*/
@@ -403,7 +392,7 @@ color: #c52518;
     top: 0;
     height: 100%;
     width: 51%;
-    background: #bababa;
+    background: #e40c2b;
 }
 
 .chevron:before {
@@ -442,12 +431,13 @@ color: #c52518;
     /* display: block;
 margin-top: 75px;
 margin-left: -30px;*/
-    color: #ececec;
+    color: #e40c2b;
     text-transform: uppercase;
     white-space: nowrap;
     opacity: .35;
     animation: pulse 2s linear alternate infinite;
     font-size: 12px;
+    font-weight: 600;
 }
 
 @keyframes pulse {
@@ -902,12 +892,18 @@ footer h3 {
     color: #c9c9c9;
 }
 
-footer a,
-footer p {
+footer a {
     text-decoration: none;
-    color: #d2d2d2;
+    color: #e5e5e5;
     transition: color 300ms ease;
     font-size: 13px;
+}
+
+footer p {
+
+    color: #e5e5e5;
+
+
 }
 
 footer a:hover {
@@ -1100,16 +1096,18 @@ a.view_more_btn:hover {
     top: 50%;
     right: -50px;
     border-radius: 0;
-    background: #ff5e14;
     display: block;
     outline: 0;
-    width: 34px;
     line-height: 34px;
-    height: 34px;
     color: #fff;
-    font-size: 23px;
+    font-size: 70px;
     margin-top: -20px;
     transition: all 0.3s ease-in-out;
+}
+
+.owl-theme .owl-nav [class*=owl-]:hover {
+
+    background: transparent !important;
 }
 
 .owl-carousel.owl-2 .owl-nav button.owl-prev {
@@ -1118,14 +1116,11 @@ a.view_more_btn:hover {
     top: 50%;
     left: -50px;
     border-radius: 0;
-    background: #ff5e14;
     display: block;
     outline: 0;
-    width: 34px;
     line-height: 34px;
-    height: 34px;
     color: #fff;
-    font-size: 23px;
+    font-size: 70px;
     margin-top: -20px;
     transition: all 0.3s ease-in-out;
 }
