--- a/style.css
+++ b/style.css
@@ -281,7 +281,7 @@ nav a:hover {
 }
 
 .social i:hover {
-    color: #f5c36f;
+    color: #d3d3d3;
 }
 
 /*.fa {
@@ -777,9 +777,9 @@ color: #F0C368;
 }
 
 .case_study_card:hover {
-    box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.4);
+    box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.1);
     transform: scale(1.04);
-    background-color: #ebebeb;
+    background-color: #fff;
 }
 
 .case_study_card h3 {
@@ -983,7 +983,7 @@ footer a:hover {
 }
 
 .card:hover a.card__link {
-    color: #eba63f;
+    color: #b97d25;
 }
 
 .view_more_btn {
@@ -1002,7 +1002,7 @@ footer a:hover {
 
 a.view_more_btn {
     text-decoration: none;
-    color: #d8d3d2;
+    color: #dfdfdf;
     font-size: 13px;
 }
 
@@ -1149,10 +1149,11 @@ a.view_more_btn:hover {
     bottom: -75px;
     color: #000;
     max-width: 420px;
-    padding: 30px;
+    padding: 24px;
     position: absolute;
     right: 7%;
     text-align: left;
+    box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.1);
 }
 
 .client-words h5 {
@@ -1161,7 +1162,7 @@ a.view_more_btn:hover {
 }
 
 .image-caption {
-    font-size: 15px;
+    font-size: 18px;
     line-height: 30px;
     font-weight: 200;
     color: #fff;
@@ -1181,6 +1182,6 @@ a.view_more_btn:hover {
 }
 
 .client-speak {
-    font-size: 15px;
+    font-size: 13px;
     font-weight: 300;
 }
