--- a/style.css
+++ b/style.css
@@ -951,14 +951,15 @@ footer a:hover {
 .card {
     padding: 20px;
     width: 500px;
-    min-height: 200px;
-    display: grid;
-    grid-template-rows: 20px 50px 1fr 50px;
+    min-height: 50px;
     border-radius: 10px;
-    /*box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.25);*/
     transition: all 0.2s;
     background-color: transparent;
     border: solid 1px whitesmoke;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: start;
 }
 
 .card:hover {
@@ -1049,13 +1050,14 @@ a.view_more_btn:hover {
     grid-row: 3/4;
     font-weight: 500;
     color: #fff;
-    font-size: 18px;
+    font-size: 15px;
     opacity: 0.9;
 }
 
 .card__apply {
     grid-row: 4/5;
-    align-self: center;
+    /*    align-self: center;
+*/
     font-size: 13px;
 }
 
