--- a/style.css
+++ b/style.css
@@ -1209,3 +1209,92 @@ a.view_more_btn:hover {
     font-size: 13px;
     font-weight: 300;
 }
+
+/*Team Members*/
+figure.snip0045 {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    background: #f1f1f1;
+    color: #000;
+}
+
+figure.snip0045 * {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+figure.snip0045 img {
+    width: 55%;
+    height: auto;
+    border-radius: 50%;
+    border: 4px solid #ffffff;
+    -webkit-transition: all 0.35s ease-in-out;
+    transition: all 0.35s ease-in-out;
+    -webkit-transform: scale(1.1);
+    position: relative;
+    z-index: 1;
+}
+
+figure.snip0045 figcaption h2,
+figure.snip0045 figcaption p {
+    text-align: center padding: 10px 0;
+    width: 100%;
+}
+
+figure.snip0045 figcaption h2 {
+    font-size: 1.3em;
+    font-weight: 400;
+    padding-top: 40px;
+}
+
+figure.snip0045 figcaption h2 span {
+    font-weight: 600;
+}
+
+figure.snip0045 figcaption p {
+    font-size: 14px;
+    color: #000;
+    font-family: 'Sara', sans-serif;
+}
+
+figure.snip0045 .position {
+    width: 100%;
+    font-size: 15px;
+    color: #f1f1f1;
+    background: #000000;
+}
+
+figure.snip0045.red .position {
+    background: #dfa413;
+    transition: all ease 500ms;
+    position: relative;
+}
+
+/* figure.snip0045:hover .position {
+    background: #3d3a46;
+} */
+.position strong:hover {
+    text-decoration: underline;
+}
+
+.snip0045 h2 {
+    font-family: 'Sara', sans-serif;
+    font-size: 10px;
+}
+
+figure.snip0045 .position span .fas {
+    transition: transform ease 500ms;
+    font-size: 15px;
+    color: #e9e9e9;
+    opacity: .7;
+}
+
+figure.snip0045:hover .position span .fas {
+    transform: scale(1.3);
+
+    opacity: 1;
+}
+
+
+/*team members end*/
